--- a/about-stefan.html
+++ b/about-stefan.html
@@ -106,6 +106,7 @@ Mark was fairly adventurous about food, although he couldn’t remember a green 
   }
 </script>
 <div id="footer-container"></div>
+<script src="js/analytics.js"></script>
 <script src="data/footer.js"></script>
 
 </html>
