--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
 </script>
 <div id="footer-container"></div>
 <script src="data/footer.js"></script>
+<script src="js/analytics.js"></script>
   </body>
 
 </html>
