--- a/category-accessories.html
+++ b/category-accessories.html
@@ -80,6 +80,7 @@
     </script>
 <div id="footer-container"></div>
 <script src="data/footer.js"></script>
+<script src="js/analytics.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
