Added Analytics to track downloads

--- a/category-newcomers-corner.html
+++ b/category-newcomers-corner.html
@@ -6,6 +6,7 @@
     <title>Newcomers Corner</title>
     <link href="css/style.css" rel="stylesheet" />
   </head>
+  <script src="js/analytics.js"></script>
   <body>
 <!-- Placeholder for injected header -->
   <div id="header-container"></div>
@@ -70,8 +71,10 @@
     window.scrollTo({ top: 0, behavior: "smooth" });
   }
 </script>
-   <div id="footer-container"></div>
+<div id="footer-container"></div>
 <script src="data/footer.js"></script>
+<script src="js/analytics.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
 
