--- a/category-plants-herbs-spices.html
+++ b/category-plants-herbs-spices.html
@@ -6,6 +6,7 @@
     <title>Plants Herbs & Spices</title>
     <link href="css/style.css" rel="stylesheet" />
   </head>
+  <script src="js/analytics.js"></script>
   <body>
 <!-- Placeholder for injected header -->
   <div id="header-container"></div>
