--- a/category-animals.html
+++ b/category-animals.html
@@ -6,6 +6,7 @@
     <title>Animals</title>
     <link href="css/style.css" rel="stylesheet" />
   </head>
+  <script src="js/analytics.js"></script>
   <body>
 <!-- Placeholder for injected header -->
   <div id="header-container"></div>
@@ -72,5 +73,6 @@
 </script>
 <div id="footer-container"></div>
 <script src="data/footer.js"></script>
+<script src="js/analytics.js"></script>
   </body>
 </html>
