--- a/category-children.html
+++ b/category-children.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Children</title>
     <link href="css/style.css" rel="stylesheet" />
-  </head>
+  </head><script src="js/analytics.js"></script>
+
   <body>
 <!-- Placeholder for injected header -->
   <div id="header-container"></div>
@@ -70,8 +71,10 @@
     window.scrollTo({ top: 0, behavior: "smooth" });
   }
 </script>
- <div id="footer-container"></div>
+<div id="footer-container"></div>
 <script src="data/footer.js"></script>
+<script src="js/analytics.js"></script>
+
   </body>
 </html>
 
