--- a/category-combat-rapier.html
+++ b/category-combat-rapier.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Combat - Rapier</title>
     <link href="css/style.css" rel="stylesheet" />
-  </head>
+  </head><script src="js/analytics.js"></script>
   <body>
   <!-- Placeholder for injected header -->
   <div id="header-container"></div>
