--- a/category-food-by-region.html
+++ b/category-food-by-region.html
@@ -77,6 +77,7 @@
         }
       </style>
     </head>
+    <script src="js/analytics.js"></script>
     <body>
       <!-- Placeholder for injected header -->
   <div id="header-container"></div>
