--- a/category-performance-arts.html
+++ b/category-performance-arts.html
@@ -8,6 +8,7 @@
     </title>
     <link href="css/style.css" rel="stylesheet" />
   </head>
+  <script src="js/analytics.js"></script>
   <body>
 <!-- Placeholder for injected header -->
   <div id="header-container"></div>
