Added the g4a snippet

--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
 />
     <link href="css/style.css" rel="stylesheet" />
   </head>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-3G5VT9X2VF"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-3G5VT9X2VF');
+</script>
   <script src="js/analytics.js"></script>
   <body>
  <!-- Placeholder for injected header -->
