--- a/category-accessories.html
+++ b/category-accessories.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>12th Century</title>
+    <title>Accessories</title>
     <link href="css/style.css" rel="stylesheet" />
   </head>
   <script src="js/analytics.js"></script>
@@ -12,7 +12,6 @@
   <div id="header-container"></div>
  <div style="display: flex">
      <div id="sidebar" style="width:200px; padding:10px;">
-    <input type="text" placeholder="Search..." id="sidebarSearch"><br>
     <div id="categoryList">
        <script>
         function loadCategories() {
