--- a/header.html
+++ b/header.html
@@ -1,5 +1,19 @@
 <header class="site-header">
-  <img src="img/Trillium_flower.svg.png" alt="Icon" class="header-icon">
-  <span class="header-title">SLR Memorial Florilegium</span>
+  <img src="img/Trillium_flower.svg.png" alt="Icon" class="header-icon" />
+  <span class="header-title">
+  <span class="slr">
+    S
+    <span class="slr-middle">L
+
+    </span>
+    R
+  </span> Memorial Florilegium
+</span>
+
   <button id="modeToggle">🌙</button>
 </header>
+
+<link
+  href="https://fonts.googleapis.com/css2?family=Mea+Culpa&display=swap"
+  rel="stylesheet"
+/>
