--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             This Florilegium was initially assembled by The Honorable Lord Stefan li
             Rous (Mark S. Harris) who passed away before I ever had the chance to
             discover it. After learning about his work, I felt inspired to carry
-            it forward — honouring his vision by maintaining and curating the
+            it forward - honouring his vision by maintaining and curating the
             original articles, while also contributing new ones to continue and
             expand his legacy.
           </p>
