--- a/updated-menu.html
+++ b/updated-menu.html
@@ -1,6 +1,8 @@
 <div style="display: flex">
   <div id="sidebar" style="width: 200px; padding: 10px">
-    <input type="text" placeholder="Search..." id="sidebarSearch" /><br />
+    <br />
+    <!-- Tag Search -->
+<input type="text" id="sidebarTagSearch" placeholder="Search..." style="width:100%; margin-bottom:8px;" />
     <p>
       <a href="index.html" style="text-decoration: none; color: #3a2a1a"
         >🏠 Home</a
