Search and tag clicks are WORKING

--- a/about-stefan.html
+++ b/about-stefan.html
@@ -150,11 +150,11 @@
     <div class="page-container">
       <!-- Sidebar -->
       <div id="sidebar">
-     <div id="categoryList"></div>
+        <div id="categoryList"></div>
       </div>
 
       <!-- Main Content -->
-      <main style="padding: min(0.5rem, 2vw) min(1rem, 3vw);">
+      <main style="padding: min(0.5rem, 2vw) min(1rem, 3vw)">
         <h2>The Honorable Lord Stefan li Rous</h2>
         <p class="subtitle">
           Pulled from his
@@ -262,6 +262,8 @@
         }
       }
     </script>
+    <div id="footer-container"></div>
     <script src="data/footer.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
