--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
   <div id="header-container"></div>
     <div style="display: flex">
      <div id="sidebar" style="width:200px; padding:10px;">
-    <input type="text" placeholder="Search..." id="sidebarSearch"><br>
     <div id="categoryList">
        <script>
         function loadCategories() {
@@ -122,6 +121,6 @@
 </script>
 <div id="footer-container"></div>
 <script src="data/footer.js"></script>
+    <script src="js/script.js"></script>
   </body>
-
 </html>
