--- a/tag.html
+++ b/tag.html
@@ -1,86 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Tag Results</title>
-    <link rel="stylesheet" href="css/style.css" />
-  </head>
-  <body>
-    <!-- Header placeholder -->
-    <div id="header-container"></div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Tag Results</title>
+  <link rel="stylesheet" href="css/style.css" />
+</head>
+<body>
+  <!-- Placeholder for injected header -->
+  <div id="header-container"></div>
 
-    <!-- Main layout -->
-    <div id="page-wrapper" style="display: flex; flex: 1; min-height: 0">
-      <!-- Sidebar -->
-      <aside id="sidebar" style="width: 200px; padding: 10px"></aside>
-
-      <!-- Main content -->
-      <main id="contentArea" style="flex: 1; min-height: 0"></main>
+  <div style="display: flex;">
+    <div id="sidebar" style="width:200px; padding:10px;">
+      <input type="text" placeholder="Search by tag or title..." id="sidebarSearch" style="width:100%; box-sizing:border-box; margin-bottom:1rem;">
+      <div id="categoryList"></div>
     </div>
 
-    <!-- Back to Top Button -->
-    <button onclick="scrollToTop()" id="backToTopBtn" title="Go to top">
-      ↑ Top
-    </button>
+    <main id="contentArea" style="padding-top:50px; flex:1;"></main>
+  </div>
 
-    <!-- Footer placeholder -->
-    <div id="footer-container"></div>
+  <!-- Inject header + handle dark mode -->
+  <script src="data/header.js"></script>
+  <div id="footer-container"></div>
+  <script src="data/footer.js"></script>
+  <script src="js/script.js"></script>
 
-    <!-- Scripts -->
-    <script>
-      window.currentTag = new URLSearchParams(window.location.search).get("tag");
+  <!-- Sidebar category loader -->
+  <script>
+    function loadCategories() {
+      fetch('updated-menu.html')
+        .then(response => response.text())
+        .then(data => {
+          const sidebar = document.getElementById('sidebar');
+          sidebar.querySelector('#categoryList').innerHTML = data;
 
-      // Pass the tag query to script.js
-      const urlParams = new URLSearchParams(window.location.search);
-      const tagQuery = urlParams.get("tag");
-      window.currentTag = tagQuery ? tagQuery.toLowerCase() : null;
-
-      // Optional: set a default category if needed
-      window.currentCategory = null;
-    </script>
-
-    <!-- Inject header, footer, and main JS -->
-    <script src="data/header.js"></script>
-    <script src="data/footer.js"></script>
-    <script src="js/script.js"></script>
-
-    <script>
-      // Once script.js has loaded and injected articles, filter by tag if present
-      document.addEventListener("DOMContentLoaded", function () {
-        if (!window.currentTag) return;
-
-        fetch("data/data.json")
-          .then((res) => res.json())
-          .then((allItems) => {
-            const filtered = allItems.filter(
-              (item) =>
-                item.tags &&
-                item.tags.some((t) => t.toLowerCase() === window.currentTag)
-            );
-
-            const contentArea = document.getElementById("contentArea");
-            if (!contentArea) return;
-
-            const header = document.createElement("h2");
-            header.textContent = `Results for #${window.currentTag}`;
-            contentArea.prepend(header);
-
-            if (!filtered || filtered.length === 0) {
-              // Show friendly message when no results
-              contentArea.innerHTML = `<h2>Results for #${window.currentTag}</h2>
-                                   <p>Oops… try a different search term.</p>`;
-            } else {
-              // Call the same displayArticles function from script.js
-              if (typeof displayArticles === "function") {
-                displayArticles(filtered, window.currentTag);
-              } else {
-                console.warn("displayArticles function not found yet.");
-              }
+          // Highlight current page
+          const currentPage = window.location.pathname.split('/').pop();
+          const links = sidebar.querySelectorAll('.category');
+          links.forEach(link => {
+            if (link.getAttribute('data-page') === currentPage) {
+              link.href = '#';
             }
-          })
-          .catch((err) => console.error(err));
-      });
-    </script>
-  </body>
+          });
+        })
+        .catch(error => console.error('Error loading categories:', error));
+    }
+    window.onload = loadCategories;
+  </script>
+
+  <!-- Tag search handling -->
+  <script>
+    const params = new URLSearchParams(window.location.search);
+    const tag = params.get("tag");
+
+    fetch("data/data.json")
+      .then(res => res.json())
+      .then(allItems => {
+        const contentArea = document.getElementById("contentArea");
+        if (!contentArea) return;
+
+        if (!tag) {
+          contentArea.innerHTML = "<p>No tag specified.</p>";
+          return;
+        }
+
+        const filtered = allItems.filter(item =>
+          item.tags && item.tags.some(t => t.toLowerCase() === tag.toLowerCase())
+        );
+
+        if (filtered.length === 0) {
+          contentArea.innerHTML = `<h2>Results for #${tag}</h2><p>Oops… try a different search term.</p>`;
+          return;
+        }
+
+        // Display articles
+        contentArea.innerHTML = `<h2>Results for #${tag}</h2>`;
+        filtered.forEach(item => {
+          const card = document.createElement("div");
+          card.className = "card";
+
+          // Title
+          const title = document.createElement("h5");
+          title.textContent = item.title;
+
+          // Description
+          const desc = document.createElement("p");
+          desc.textContent = item.description;
+
+          // Download button
+          const downloadBtn = document.createElement("button");
+          downloadBtn.className = "download-btn";
+          downloadBtn.textContent = "Download";
+          downloadBtn.onclick = () => window.open(item.download_url, "_blank");
+
+          // Tags
+          const tagsDiv = document.createElement("div");
+          tagsDiv.className = "tags";
+          if (item.tags) {
+            item.tags.forEach(t => {
+              const span = document.createElement("span");
+              span.className = "tag-badge";
+              span.textContent = `#${t}`;
+              span.onclick = () => {
+                window.location.href = `tag.html?tag=${encodeURIComponent(t)}`;
+              };
+              tagsDiv.appendChild(span);
+            });
+          }
+
+          card.appendChild(title);
+          card.appendChild(desc);
+          card.appendChild(downloadBtn);
+          card.appendChild(tagsDiv);
+
+          contentArea.appendChild(card);
+        });
+      })
+      .catch(err => console.error(err));
+  </script>
+</body>
 </html>
