--- a/index.html
+++ b/index.html
@@ -5,122 +5,148 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Memorial Florilegium</title>
     <link
-  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-  rel="stylesheet"
-  integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-  crossorigin="anonymous"
-/>
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
     <link href="css/style.css" rel="stylesheet" />
   </head>
-  
-  <script src="js/analytics.js"></script>
   <body>
- <!-- Placeholder for injected header -->
-  <div id="header-container"></div>
+    <!-- Placeholder for injected header -->
+    <div id="header-container"></div>
+
     <div style="display: flex">
-     <div id="sidebar" style="width:200px; padding:10px;">
-    <div id="categoryList">
-       <script>
-        function loadCategories() {
-            fetch('updated-menu.html')
-                .then(response => response.text())
-                .then(data => {
-                    const currentPage = window.location.pathname.split('/').pop(); // Get current page
-                    const sidebar = document.getElementById('sidebar');
-                    sidebar.innerHTML = data;
+      <div id="sidebar" style="width: 200px; padding: 10px">
+        <div id="categoryList"></div>
+      </div>
 
-                    // Modify links
-                    const links = sidebar.querySelectorAll('.category');
-                    links.forEach(link => {
-                        if (link.getAttribute('data-page') === currentPage) {
-                            link.href = '#'; // Replace href with '#'
-                        }
-                    });
-                })
-                .catch(error => console.error('Error loading categories:', error));
-        }
+      <main style="padding-top: 50px; flex: 1">
+        <h2>Welcome</h2>
+        <p>
+          This Florilegium was initially assembled by The Honorable Lord Stefan
+          li Rous (Mark S. Harris) who passed away before I ever had the chance
+          to discover it. After learning about his work, I felt inspired to
+          carry it forward - honouring his vision by maintaining and curating
+          the original articles, while also contributing new ones to continue
+          and expand his legacy.
+        </p>
 
-        window.onload = loadCategories;
-    </script>
-    </div>
-</div>
+        <p>
+          What's a `Florilegium'? Literally, it means "a gathering of flowers".
+          Florilegia were collections of choice tidbits (from Ovid, Aristotle,
+          various popes, church scholars, etc) arranged topically. Typically, a
+          florilegium is huge, encyclopedic, and contains only choice selections
+          from particular works...
+        </p>
 
-      <main style="padding-top: 50px">
-         <h2>Welcome</h2>
-          <p>
-            This Florilegium was initially assembled by The Honorable Lord Stefan li
-            Rous (Mark S. Harris) who passed away before I ever had the chance to
-            discover it. After learning about his work, I felt inspired to carry
-            it forward - honouring his vision by maintaining and curating the
-            original articles, while also contributing new ones to continue and
-            expand his legacy.
-          </p>
+        <p>
+          I hope you find these files useful, interesting, amusing or all three.
+        </p>
 
-          <p>What's a `Florilegium'? Literally, it means "a gathering of flowers". Florilegia were collections of choice tidbits (from Ovid, Aristotle, various popes, church scholars, etc) arranged topically.
+        <h3>How it works</h3>
+        <ul>
+          <li>Browse categories using the sidebar.</li>
+          <li>
+            Search by tags or titles in the sidebar search box. You can also
+            click on a tag to view all items with that tag.
+          </li>
+          <li>
+            Download files using the download button on each card. Downloads
+            will be in PDF format.
+          </li>
+        </ul>
 
- Typically, a florilegium is huge, encyclopedic, and contains only choice selections from particular works. Example, Ovid's Metamorphoseswould be too long to include in its entirety and might suggest some ofthe wrong ideas (from a Church viewpoint), so only those works that offerclear exegetic or moralistic exempla would likely be included. Thus, a florilegium would probably *not* include Nestor's account of the battle of the Lapiths -- the tale pokes fun at Nestor, at old men attempting to claim wisdom solely based upon age, and (less directly) at Homer. A florilegium probably *would* contain the tales of Midas, however, because they provide lessons on the evils of greed, pride, and gossip.
- </p>
+        <h3>File Prefix</h3>
+        <ul class="list-unstyled">
+          <li>
+            BIB: A bibliography of book and article titles on a single subject.
+          </li>
+          <li>
+            FAQ: An article file that follows a Frequently Asked Questions
+            format.
+          </li>
+          <li>
+            LINK: An article file that contains a list of web links, frequently
+            annotated with comments.
+          </li>
+          <li>
+            MSG: usually originating from an email list back and forth, or
+            messages copied from a discord/facebook/thread.
+          </li>
+        </ul>
 
-<p>I hope you find these files useful, interesting, amusing or all three.</p>
-        </br>
-          <h3>How it works</h3>
-          <ul>
-            <li>Browse categories using the sidebar.</li>
-            <li>Search by tags or titles in the sidebar search box. You can also click on a tag to view all items with that tag.</li>
-            <li>Download files using the download button on each card. Downloads will be in PDF format.</li>
-          </ul>
-
-          <h3> File Prefix</h3>
-          
-          Most items here will not have a file prefix if they are an article or scan of a document. For some files, however, you may see the below prefix:
-          <ul class="list-unstyled">
-    <li>BIB: A bibliography of book and article titles on a single subject.</li>
-    <li>FAQ:   An article file that follows a Frequently Asked Questions format. </li>
-    <li>LINK: An article file that contains a list of web links, frequently annotated with comments.</li>
-    <li>MSG: usually originating from an email list back and forth, or messages copied from a discord/facebook/thread.</li>
-          </ul>
-
-          <h3>Submit an article</h3>
-          <p>
-            To submit an article, please <a href="mailto:ren.swiftwater@gmail.com">email your text submission directly</a>, either in doc/docx or pdf format. Include your name and any SCA kingdom or baronial affiliation.
-          </p>
-
-          
-
-               </div>
+        <h3>Submit an article</h3>
+        <p>
+          To submit an article, please
+          <a href="mailto:ren.swiftwater@gmail.com"
+            >email your text submission directly</a
+          >, either in doc/docx or pdf format. Include your name and any SCA
+          kingdom or baronial affiliation.
+        </p>
       </main>
     </div>
+
     <!-- Inject header + handle dark mode -->
-  <script src="data/header.js"></script>
-     <!-- Back to Top Button -->
-<button onclick="scrollToTop()" id="backToTopBtn" title="Go to top">↑ Top</button>
-<script>
-  fetch("footer.html")
-    .then(res => res.text())
-    .then(html => {
-      document.getElementById("footer-container").innerHTML = html;
-    });
-</script>
-<script>
-  // Show button when scrolled down
-  window.onscroll = function() {scrollFunction()};
+    <script src="data/header.js"></script>
 
-  function scrollFunction() {
-    const button = document.getElementById("backToTopBtn");
-    if (document.body.scrollTop > 200 || document.documentElement.scrollTop > 200) {
-      button.style.display = "block";
-    } else {
-      button.style.display = "none";
-    }
-  }
+    <!-- Back to Top Button -->
+    <button onclick="scrollToTop()" id="backToTopBtn" title="Go to top">
+      ↑ Top
+    </button>
 
-  // Smooth scroll to top
-  function scrollToTop() {
-    window.scrollTo({ top: 0, behavior: "smooth" });
-  }
-</script>
-<div id="footer-container"></div>
-<script src="data/footer.js"></script>
+    <!-- Footer -->
+    <div id="footer-container"></div>
+    <script src="data/footer.js"></script>
+
+    <!-- Sidebar category loader -->
+    <script>
+      function loadCategories() {
+        fetch("updated-menu.html")
+          .then((response) => response.text())
+          .then((data) => {
+            const sidebar = document.getElementById("sidebar");
+            sidebar.querySelector("#categoryList").innerHTML = data;
+
+            // Highlight current page
+            const currentPage = window.location.pathname.split("/").pop();
+            const links = sidebar.querySelectorAll(".category");
+            links.forEach((link) => {
+              if (link.getAttribute("data-page") === currentPage) {
+                link.href = "#";
+              }
+            });
+          })
+          .catch((error) => console.error("Error loading categories:", error));
+      }
+
+      window.addEventListener("DOMContentLoaded", loadCategories);
+    </script>
+
+    <!-- Back-to-top button logic -->
+    <script>
+      window.onscroll = function () {
+        scrollFunction();
+      };
+      function scrollFunction() {
+        const button = document.getElementById("backToTopBtn");
+        if (
+          document.body.scrollTop > 200 ||
+          document.documentElement.scrollTop > 200
+        ) {
+          button.style.display = "block";
+        } else {
+          button.style.display = "none";
+        }
+      }
+
+      function scrollToTop() {
+        window.scrollTo({ top: 0, behavior: "smooth" });
+      }
+    </script>
+
+    <!-- Main JS (includes search and article handling) -->
     <script src="js/script.js"></script>
+    <script src="js/analytics.js"></script>
   </body>
 </html>
