--- a/updated-menu.html
+++ b/updated-menu.html
@@ -5,8 +5,7 @@
 <input type="text" id="sidebarTagSearch" placeholder="Search..." style="width:100%; margin-bottom:8px;" />
     <p>
       <a href="index.html" style="text-decoration: none; color: #3a2a1a"
-        >🏠 Home</a
-      >
+        >🏠 Home</a>
     </p>
     <div id="categoryList">
       <p>
