--- a/updated-menu.html
+++ b/updated-menu.html
@@ -2,7 +2,7 @@
   <div id="sidebar" style="width: 200px; padding: 10px">
     <br />
     <!-- Tag Search -->
-<input type="text" id="sidebarTagSearch" placeholder="Search..." style="width:100%; margin-bottom:8px;" />
+<input type="text" id="sidebarTagSearch" placeholder="Search here..." style="width:100%; margin-bottom:8px;" />
     <p>
       <a href="index.html" style="text-decoration: none; color: #3a2a1a"
         >🏠 Home</a>
