--- a/about-stefan.html
+++ b/about-stefan.html
@@ -2,15 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>About SLR</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
     <link href="css/style.css" rel="stylesheet" />
+  </head>
+  <body>
+    <!-- Placeholder for injected header -->
+    <div id="header-container"></div>
+    <div style="display: flex">
+      <div id="sidebar" style="width: 200px; padding: 10px">
+        <div id="categoryList">
     <style>
       body {
         margin: 0;
