fixed spacing etc on menu

--- a/header.html
+++ b/header.html
@@ -1,16 +1,12 @@
 <header class="site-header">
   <img src="img/Trillium_flower.svg.png" alt="Icon" class="header-icon" />
   <span class="header-title">
-  <span class="slr">
-    S
+  <span class="slr">S
     <span class="slr-middle">L
-
-    </span>
-    R
+    </span>R
   </span> Memorial Florilegium
 </span>
-
-  <button id="modeToggle">🌙</button>
+<button id="modeToggle">🌙</button>
 </header>
 
 <link
